Rename project to "hello-world-template-mcp" and update README, package.json, and configuration files to reflect new purpose as a simple Hello World MCP template. Remove unused status checking tool and related code.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tml-graphql-service",
+  "name": "hello-world-template-mcp",
   "version": "1.0.0",
-  "description": "A service that provides access to TML GraphQL API data",
+  "description": "A simple Hello World MCP template",
   "main": "src/index.ts",
   "type": "module",
   "engines": {
