--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.5.0",
+    "axios": "^1.8.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
